<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView_Main_Bg"
        android:layout_width="50dp"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        android:contentDescription="@string/imageView_Main_Bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bg" />

    <TextView
        android:id="@+id/textView_Main_Judul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        style="@style/textViewJudul"
        android:text="@string/textView_Main_Judul"
        app:layout_constraintStart_toEndOf="@+id/imageView_Main_Bg"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_Main_Panjang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        style="@style/textViewSub"
        android:text="@string/textView_Main_Panjang"
        app:layout_constraintStart_toEndOf="@+id/imageView_Main_Bg"
        app:layout_constraintTop_toBottomOf="@+id/textView_Main_Judul" />

    <EditText
        android:id="@+id/editText_Main_Panjang"
        style="@style/editTextNilai"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/textView_Main_Panjang"
        android:autofillHints="@string/textView_Main_Panjang"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView_Main_Bg"
        app:layout_constraintTop_toBottomOf="@+id/textView_Main_Panjang" />

    <TextView
        android:id="@+id/textView_Main_Lebar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        style="@style/textViewSub"
        android:text="@string/textView_Main_Lebar"
        app:layout_constraintStart_toEndOf="@+id/imageView_Main_Bg"
        app:layout_constraintTop_toBottomOf="@+id/editText_Main_Panjang" />

    <EditText
        android:id="@+id/editText_Main_Lebar"
        style="@style/editTextNilai"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/textView_Main_Lebar"
        android:autofillHints="@string/textView_Main_Lebar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView_Main_Bg"
        app:layout_constraintTop_toBottomOf="@+id/textView_Main_Lebar" />

    <TextView
        android:id="@+id/textView_Main_Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        style="@style/textViewSub"
        android:layout_marginTop="16dp"
        android:text="@string/textView_Main_Password"
        app:layout_constraintStart_toEndOf="@+id/imageView_Main_Bg"
        app:layout_constraintTop_toBottomOf="@+id/editText_Main_Lebar" />

    <EditText
        android:id="@+id/editText_Main_Password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/textView_Main_Password"
        android:autofillHints="@string/textView_Main_Password"
        style="@style/editTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView_Main_Bg"
        app:layout_constraintTop_toBottomOf="@+id/textView_Main_Password" />

    <Button
        android:id="@+id/button_Main_Hitung"
        style="@style/buttonHitung"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/button_Main_Hitung"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView_Main_Bg"
        app:layout_constraintTop_toBottomOf="@+id/editText_Main_Password" />

</android.support.constraint.ConstraintLayout>